# comments-tool

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: pre-commit.yml  validate.yml
scripts/: validate_environment.py
src/comment_tool/: __init__.py  __main__.py
