[project]
name = "comment-tool"
version = "0.1.0"
description = "A Python tool for processing comments in C/C++ source files"
requires-python = ">=3.12"
dependencies = [
    "isort>=5.13.2",
    "mypy>=1.14.1",
    "pre-commit>=4.2.0",
    "pyupgrade>=3.15.0",
    "regex",
    "tqdm",
    "types-setuptools>=75.8.0.20250110",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "black",
    "flake8",
    "mypy",
]

[project.scripts]
extract-comments = "comment_tool.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/comment_tool"]
